<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Entry">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/entryAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/entryAddButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeButton" />

    <EditText
        android:id="@+id/textItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioType" />

    <Button
        android:id="@+id/entryHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entryHomeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryAddButton" />

    <Button
        android:id="@+id/dateTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/datebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unitSpinner" />

    <RadioGroup
        android:id="@+id/radioType"
        android:layout_width="158dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:checkedButton="@id/radioFood"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioFood"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:text="@string/foodratio" />

        <RadioButton
            android:id="@+id/radioWater"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:text="@string/waterratio" />
    </RadioGroup>

    <TextView
        android:id="@+id/selectedDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/entryAddButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeButton"
        app:layout_constraintVertical_bias="0.242" />

    <EditText
        android:id="@+id/textValueInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Calories"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textItemName" />

    <Spinner
        android:id="@+id/unitSpinner"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:entries="@array/waterUnits"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textValueInput" />

</androidx.constraintlayout.widget.ConstraintLayout>